--- a/views/styles.css
+++ b/views/styles.css
@@ -14,10 +14,11 @@ html, body { height: 100%; width: 100%; margin: 0; background-color: black;font-
 }
 .line1 {
     display:flex;
-    font-size: xxx-large;
+    font-size: 60px;
     position: relative;
-    line-height: 40px;
-    padding-top: 20px;
+    line-height: 60px;
+    padding-bottom: 20px;
+    padding-top: 10px;
 }
 .line2 {
     display:flex;
